--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 pandas==1.0.3
 numpy==1.18.4
 streamlit==0.48.1
+jupyter-server-proxy 
+jupyter-rsession-proxy
+nbserverproxy
 Pillow==6.2.2
 requests==2.20.0
 wheel==0.34.2
